--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
 </head>
 <body>
     <h1>Mohammad Quraish</h1>
+    <p class="contact">Mobile No: +91 865 559 4617 (WhatsApp) <br>
+        Email ID: <a href="quraishazmi@gmail.com">quraishazmi@gmail.com</a> <br>
+        <a href="https://www.linkedin.com/in/mohammad-quraish-a379a418b">Linkedin Profile</a>
+            <div>
+                <img src="./My Photo.jpg" alt="Photo">
+            </div>
+        <hr>    
+    </p>
+    
+    
 
 </body>
 </html>
