--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 </head>
 <body>
     <h1>Mohammad Quraish</h1>
-    <p class="contact">Mobile No: +91 865 559 4617 (WhatsApp) <br>
-        Email ID: <a href="quraishazmi@gmail.com">quraishazmi@gmail.com</a> <br>
-        <a href="https://www.linkedin.com/in/mohammad-quraish-a379a418b">Linkedin Profile</a>
+    <p class="contact">Mobile No: +91 987 654 3210 (WhatsApp) <br>
+        Email ID: <a href="abcdefghijklmn@gmail.com">abcdefghijklmn@gmail.com</a> <br>
+        <a href="https://www.linkebin.com/in/iwtevsfdk-gfhfjul-a379a418b">Linkedin Profile</a>
             <div>
                 <img src="./My Photo.jpg" alt="Photo">
             </div>
